# GamingMonitor

./: .gitignore  CMakeLists.txt  GamingMonitor_en_US.ts  dashboard.cpp  dashboard.h  dashboard.ui  login.cpp  login.h  login.ui  main.cpp  ssh_get_info.cpp  ssh_get_info.h
